Update Scraping Instagram using Selenium Library.ipynb

--- a/Scraping Instagram using Selenium Library.ipynb
+++ b/Scraping Instagram using Selenium Library.ipynb
@@ -227,7 +227,7 @@
     "            pass\n",
     "\n",
     "log_in_credentials()\n",
-    "#code by vivek"
+    "#code by vivek IG:_infinite__void_"
    ]
   },
   {
